<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMiscellaneous"
    android:orientation="vertical"
    android:background="@drawable/backgraound_miscellaneaus"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">


    <!-- Miscellaneous-->


    <TextView
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:id="@+id/layoutNoteTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_newTag"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/new_tag"
            android:drawableStart="@drawable/ic_open_new"
            android:drawablePadding="@dimen/_5sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="#FFC107"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tag_Recycle"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddCamera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_camera"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/camera"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddVaice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_voice"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_voice"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddLink"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_link"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_link"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDelete_Note"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:visibility="gone"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_delete_d"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    </LinearLayout>