<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialog_voice"
    android:background="@drawable/background_dialog_link"
    android:layout_gravity="center"
    android:padding="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/colorImageRecording"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:src="#3D4051"
        app:civ_border_color="#3D4051"
        app:civ_border_width="@dimen/_1sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textRecording"
        app:layout_constraintTop_toTopOf="@+id/textRecording"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopped"
        android:textSize="@dimen/_15sdp"
        android:textColor="#3D4051"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:gravity="center"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/chronoTime"
        app:layout_constraintStart_toEndOf="@+id/colorImageRecording"/>

    <Chronometer
        android:id="@+id/chronoTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_30ssp"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/recordVoiceBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/recordVoiceBtn"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/record_btn_stopped"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/add_Voice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/add_Voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/add"
        android:textColor="#FFC107"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/cancel_Voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="#F53324"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_Voice"/>





</androidx.constraintlayout.widget.ConstraintLayout>