<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_dialog_Action"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_15sdp"
    android:background="@drawable/background_sheet_bottom_dialog">

    <TextView
        android:id="@+id/title_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:gravity="center"
        android:background="@drawable/text_sheet_dialog_bottom"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        android:textColor="#000"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorPrimary"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:padding="@dimen/_10sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_note"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:cardElevation="@dimen/_1sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_note"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:scaleType="fitXY"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/LN1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/card_note"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_sender_note"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:civ_border_width="@dimen/_1sdp"
                app:civ_border_color="#FFC107"/>

            <TextView
                android:id="@+id/name_Sender_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="start|center"
                android:background="#00FFFFFF"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/ubuntu_regular"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:contentDescription="@string/app_name"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LN2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toEndOf="@id/card_note"
            app:layout_constraintTop_toBottomOf="@id/LN1"
            app:layout_constraintEnd_toEndOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_title_24"/>

            <TextView
                android:id="@+id/title_note_D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="start|center"
                android:background="#00FFFFFF"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/ubuntu_regular"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:contentDescription="@string/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LN3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toEndOf="@id/card_note"
            app:layout_constraintTop_toBottomOf="@id/LN2"
            app:layout_constraintEnd_toEndOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_subtext"/>

            <TextView
                android:id="@+id/Subtitle_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="start|center"
                android:background="#00FFFFFF"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/ubuntu_regular"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:contentDescription="@string/app_name"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@id/card_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LN3"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linear_Update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="start|center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_update_note"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:gravity="start|center"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#000"
            android:text="@string/note_update"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_regular"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_Share_Online"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:gravity="start|center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_share_note"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:gravity="start|center"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#000"
            android:text="@string/note_share"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_regular"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_Share_Whats"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="start|center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_share_whats"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:gravity="start|center"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#000"
            android:text="@string/note_share_whats_up"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_regular"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear_downloading_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:visibility="visible"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="start|center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_downloading_photo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:gravity="start|center"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#000"
            android:text="@string/downloading_photo"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_regular"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear_downloading_voice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:visibility="visible"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="start|center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_downloading_voice"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:gravity="start|center"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#000"
            android:text="@string/downloading_voice"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_regular"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear_Note_Delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="start|center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_delete_note"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:gravity="start|center"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#000"
            android:text="@string/note_delete"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_regular"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>


</LinearLayout>