<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_header"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="start|center"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_24ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/UserImage"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_65sdp"
            android:src="@drawable/ic_person"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_overlay="true"
            app:civ_border_width="@dimen/_2sdp" />

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:drawableStart="@drawable/point_name"
            android:drawablePadding="@dimen/_3sdp"
            android:fontFamily="@font/fonts_main"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/username"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <TextView
        android:id="@+id/UserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/fonts_main"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textColor="#FFC107"
        android:textSize="@dimen/_14ssp" />

    <Spinner
        android:id="@+id/OptionSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/spinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/background_tag" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/background_tag"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AllNotes_Header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/tags"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/LayoutTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@color/colorPrimary"
            app:tabMode="fixed"
            app:tabIndicatorColor="#fff"
            app:tabSelectedTextColor="#FFC107"
            app:tabTextColor="#fff">

        </com.google.android.material.tabs.TabLayout>

        <SearchView
            android:id="@+id/SenderSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:padding="@dimen/_5sdp"
            android:background="@color/colorPrimary"
            android:gravity="center|start"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recycle_Hedar_Tags_Sender"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recycle_Hedar_Tags_Sender2"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

</LinearLayout>